--- a/styles/style.css
+++ b/styles/style.css
@@ -38,6 +38,8 @@ h1 {
     font-weight: 700;
     font-family: "Genos", sans-serif;
     font-optical-sizing: auto;
+
+    text-shadow: .2px .2px .2px rgba(0, 0, 0, 0.288);
 }
 
 .input-wrapper {
@@ -51,6 +53,15 @@ h1 {
     border-radius: .4rem;
     border: 1px solid rgba(62, 63, 65, 0.3);
     background: #DCE2E9;
+}
+
+.input-wrapper input[type="date"]{
+    text-transform: uppercase;
+}
+
+.input-wrapper input[type="text"]{
+    text-align: center;
+    width: 95%;
 }
 
 .input-wrapper label {
@@ -74,7 +85,7 @@ form button {
     gap: .8rem;
     width: 100%;
     justify-content: center;
-    padding: 1.6rem;
+    padding: 1rem 1.6rem;
     margin-top: 3.2rem;
     background-color: var(--laranja-padrao);
     border-radius: .4rem;
@@ -142,4 +153,43 @@ form button:hover {
     z-index: -1;
 }
 
+.error-message{
+    background-color: rgb(35, 86, 137);
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
 
+    text-align: center;
+
+    padding: .8rem 0;
+
+    color: rgb(249, 231, 231);
+    font-weight: 700;
+
+    transform: translateY(-40px);
+    opacity: 0;
+
+    transition: 1s;
+}
+
+.error-message.error-message-on{
+    transform: translateY(0);
+    opacity: 1;
+}
+
+.myForm div:nth-child(4){
+    display: flex;
+    flex-direction: row;
+    /* gap: 1rem; */
+    align-items: end;
+}
+
+.class-col{
+    display: flex;
+    flex-direction: column;
+}
+
+.brisanet-logo-img{
+    width: 50px;
+}
