--- a/styles/style.css
+++ b/styles/style.css
@@ -61,7 +61,7 @@ h1 {
 
 .input-wrapper input[type="text"]{
     text-align: center;
-    width: 95%;
+    width: 100%;
 }
 
 .input-wrapper label {
@@ -181,13 +181,16 @@ form button:hover {
 .myForm div:nth-child(4){
     display: flex;
     flex-direction: row;
-    /* gap: 1rem; */
     align-items: end;
+
+    justify-content: space-around;
 }
 
 .class-col{
     display: flex;
     flex-direction: column;
+    width: 38%;
+    justify-content: left;
 }
 
 .brisanet-logo-img{
