--- a/styles/style.css
+++ b/styles/style.css
@@ -16,7 +16,8 @@
     font-family: "Roboto", sans-serif;
 }
 
-.modal-card, .wrapper{
+.modal-card,
+.wrapper {
     margin: 0;
 }
 
@@ -56,11 +57,11 @@ h1 {
     background: #DCE2E9;
 }
 
-.input-wrapper input[type="date"]{
+.input-wrapper input[type="date"] {
     text-transform: uppercase;
 }
 
-.input-wrapper input[type="text"]{
+.input-wrapper input[type="text"] {
     text-align: center;
     width: 100%;
 }
@@ -73,7 +74,7 @@ h1 {
     margin-top: 1.8rem;
 }
 
-form{
+form {
     background-color: white;
     padding: 5rem;
     border-radius: 1rem;
@@ -150,11 +151,11 @@ form button:hover {
     gap: 1rem;
 }
 
-.background{
+.background {
     z-index: -1;
 }
 
-.error-message{
+.error-message {
     background-color: rgb(35, 86, 137);
     position: absolute;
     top: 0;
@@ -174,12 +175,12 @@ form button:hover {
     transition: 1s;
 }
 
-.error-message.error-message-on{
+.error-message.error-message-on {
     transform: translateY(0);
     opacity: 1;
 }
 
-.myForm div:nth-child(4){
+.myForm div:nth-child(4) {
     display: flex;
     flex-direction: row;
     align-items: end;
@@ -187,13 +188,13 @@ form button:hover {
     justify-content: space-around;
 }
 
-.class-col{
+.class-col {
     display: flex;
     flex-direction: column;
     width: 38%;
     justify-content: left;
 }
 
-.brisanet-logo-img{
+.brisanet-logo-img {
     width: 50px;
 }
