--- a/styles/backgroundAnimation.css
+++ b/styles/backgroundAnimation.css
@@ -1,3 +1,9 @@
+:root {
+    font-size: 62.5%;
+
+    --dafault-orange: #FF4F18;
+}
+
 @keyframes animate {
     0%{
         transform: translateY(0) rotate(0deg);
@@ -19,7 +25,7 @@
     left: 0;
     margin: 0;
     padding: 0;
-    background: #ff4f18;
+    background: var(--dafault-orange);
     overflow: hidden;
 }
 .background li {
@@ -342,11 +348,3 @@
 
     transition: 1s;
 }
-
-
-
-.error-message.error-message-on {
-    transform: translateY(0);
-    opacity: 1;
-}
-
