--- a/styles/style.css
+++ b/styles/style.css
@@ -1,11 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Genos:ital,wght@0,100..900;1,100..900&display=swap');
-@import url("./animations.css");
+@import url("./backgroundAnimation.css");
+@import url("./modal.css");
+@import url("./logo.css");
+@import url("./sticky.css");
 
 :root {
     font-size: 62.5%;
 
-    --laranja-padrao: #FF4F18;
+    --dafault-orange: #FF4F18;
+    --default-white: #FFFFFF;
+    --stroke-color: rgba(255, 255, 255, 0.5);
+    --surface-color: rgba(255, 255, 255, 0.05);
+    --surface-color-hover: rgba(0, 0, 0, 0.02);
+    --highlight-color: rgba(197, 197, 197, 0.2);
+    --switch-bg-url: url(./assets/moon-stars.svg);
 }
 
 * {
@@ -14,11 +23,6 @@
     box-sizing: border-box;
 
     font-family: "Roboto", sans-serif;
-}
-
-.modal-card,
-.wrapper {
-    margin: 0;
 }
 
 body {
@@ -32,7 +36,7 @@ body {
 }
 
 h1 {
-    color: var(--laranja-padrao);
+    color: var(--dafault-orange);
     text-transform: uppercase;
     font-weight: 700;
     font-family: "Genos", sans-serif;
@@ -47,39 +51,47 @@ h1 {
     flex-direction: column;
 }
 
-.input-wrapper input {
-    padding: 1.6rem 2rem;
-    width: 100%;
-    border-radius: .4rem;
-    border: 1px solid rgba(62, 63, 65, 0.3);
-    background: #DCE2E9;
-}
-
-.input-wrapper input[type="date"] {
-    text-transform: uppercase;
-}
-
-.input-wrapper input[type="text"] {
-    text-align: center;
-    width: 100%;
-}
-
-.input-wrapper label {
-    font-size: 1.4rem;
-    color: 1px solid rgba(62, 63, 65, 0.3);
-    line-height: 1.8rem;
-    margin-bottom: .8rem;
-    margin-top: 1.8rem;
-}
-
-form {
-    background-color: white;
+.myForm, .formPopUp {
+    background-color: var(--default-white);
     padding: 5rem;
     border-radius: 1rem;
     margin-top: -6rem;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1), 0 3px 10px rgba(0, 0, 0, 0.1);
 }
 
-form button {
+label {
+    font-size: 1.4rem;
+    color: rgb(62, 63, 65);
+    line-height: 1.8rem;
+    margin-bottom: .4rem;
+    margin-top: 1.8rem;
+}
+
+.select-container {
+    position: relative;
+    display: inline-block;
+  }
+
+select {
+    padding: .8rem 2rem .8rem 1.4rem;
+    border-radius: .4rem;
+    border: 1px solid rgba(62, 63, 65, 0.3);
+    background: #DCE2E9;
+    color: rgb(62, 63, 65);
+    appearance: none;
+    -webkit-appearance: none;
+    background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cg clip-path='url(%23clip0_1_54)'%3E%3Cpath d='M8 10L12 14L16 10' stroke='%239C98A6' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/g%3E%3Cdefs%3E%3CclipPath id='clip0_1_54'%3E%3Crect width='24' height='24' fill='white'/%3E%3C/clipPath%3E%3C/defs%3E%3C/svg%3E%0A");
+    background-repeat: no-repeat;
+    background-position: right 9.5px top 50%;
+    background-size: 24px;
+    cursor: pointer;
+}
+
+#value-plan {
+    width: 10rem;
+}
+
+.myForm button {
     display: flex;
     align-items: center;
     gap: .8rem;
@@ -87,86 +99,20 @@ form button {
     justify-content: center;
     padding: 1rem 1.6rem;
     margin-top: 3.2rem;
-    background-color: var(--laranja-padrao);
+    background-color: var(--dafault-orange);
     border-radius: .4rem;
     border: none;
-    color: #FFFFFF;
+    color: var(--default-white);
     line-height: 2rem;
     font-weight: 700;
-    transition: background 1s;
-}
-
-form button:hover {
-    background-color: #9a3e22;
     cursor: pointer;
-}
-
-.modal-card {
-    height: 100vh;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: rgba(0, 0, 0, 0.829);
-    padding: 5rem 2.5rem;
-    font-size: 1.2rem;
-    opacity: 0;
-    visibility: hidden;
-}
-
-.formPopUp {
-    position: relative;
-}
-
-.buttonClose {
-    border: none;
-    background: none;
-    position: absolute;
-    top: 1.6rem;
-    right: 1.6rem;
-    width: 2rem;
-    height: 2rem;
-    cursor: pointer;
-    transition: .3s;
-}
-
-.buttonClose:hover {
-    transform: scale(1.1);
-}
-
-.hide {
-    opacity: 1;
-    visibility: visible;
-    transform: translateY(0);
 }
 
 .buttons {
-    display: flex;
-    gap: 1rem;
-}
-
-
-
-
-.myForm div:nth-child(4) {
     display: flex;
     flex-direction: row;
     align-items: end;
 
     justify-content: center;
-    gap: 2rem;
-}
-
-.class-col {
-    display: flex;
-    flex-direction: column;
-    width: 50%;
-}
-
-.brisanet-logo-img {
-    width: 50px;
+    gap: 1.5rem;
 }
