--- a/styles/style.css
+++ b/styles/style.css
@@ -49,8 +49,9 @@ h1 {
     flex-direction: column;
 }
 
-.myForm,
-.formPopUp {
+.quickbill,
+.formPopUp,
+.quickmeter {
     background-color: var(--default-white);
     padding: 5rem;
     border-radius: 1rem;
@@ -85,7 +86,7 @@ select {
     width: 10rem;
 }
 
-.myForm button {
+.quickbill button, .quickmeter button {
     display: flex;
     align-items: center;
     gap: .8rem;
@@ -121,4 +122,8 @@ select {
     clip: rect(0, 0, 0, 0);
     white-space: nowrap;
     border-width: 0;
+}
+
+.quickmeter{
+    display: none;
 }
