--- a/styles/style.css
+++ b/styles/style.css
@@ -2,8 +2,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Genos:ital,wght@0,100..900;1,100..900&display=swap');
 @import url("./backgroundAnimation.css");
 @import url("./modal.css");
-@import url("./logo.css");
-@import url("./sticky.css");
+@import url("./logo-link.css");
+@import url("./sticky-bug.css");
 @import url("./animationsSticker.css");
 
 :root {
